<resources>
    <string name="app_name">ThriveTrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="focus_mode_title">What Is The 1 Goal That Will Completely Change Your Life If You Achieve It?</string>
    <string name="setup_end_title">You Have Taken The First Step To Becoming Your New Self!</string>
    <string name="tasks_explenation">Now, Write 4 Tasks You Should Do Every Day, In Order To Achieve This Goal. You Can Always Edit, Delete or Add More Tasks Later On!</string>
    <string name="first_label">1)</string>
    <string name="second_label">2)</string>
    <string name="third_label">3)</string>
    <string name="fourth_label">4)</string>
    <string name="fifth_label">5)</string>
    <string name="task_input_title">Task Input</string>
    <string name="SetupEndMessage">Great Work!\nNow Lets Get Started!</string>
    <string name="profile_label">My\nProfile</string>
    <string name="goals_label">Goals</string>
    <string name="todo_label">To Do\nList</string>
    <string name="diary_label">Diary</string>
    <string name="community_label">Community</string>
    <string name="change_username_label">Change Username</string>
    <string name="change_password_label">Change Password</string>
    <string name="delete_account_label">Delete Account</string>
    <string name="delete_warning">Are You Sure You Want To Delete Your Account?\nThis Is An Irreversible Process, That Will Delete All Of Your Data?\nPlus, Our Community Will Miss You :(</string>
    <string name="enter_password_label">Enter Password</string>
    <string name="confirm">Confirm</string>

    <array name="security_questions">
        <item name="1">What Is Your Hometown?</item>
        <item name="2">What Is Your Pets Name?</item>
        <item name="3">What Is The Name Of Your Elementary School?</item>
        <item name="4">What Is Your Favorite Color?</item>
    </array>
</resources>