<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.setup.TaskInputFragment">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/task_input_title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/thirdTaskEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdTaskLabel" />

    <TextView
        android:id="@+id/fourthTaskLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fourth_label"
        app:layout_constraintEnd_toEndOf="@+id/fourthTaskEt"
        app:layout_constraintStart_toStartOf="@+id/fourthTaskEt"
        app:layout_constraintTop_toBottomOf="@+id/thirdTaskEt" />

    <TextView
        android:id="@+id/thirdTaskLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/third_label"
        app:layout_constraintEnd_toEndOf="@+id/fourthTaskEt"
        app:layout_constraintStart_toStartOf="@+id/fourthTaskEt"
        app:layout_constraintTop_toBottomOf="@+id/secondTaskEt" />

    <EditText
        android:id="@+id/secondTaskEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondTaskLabel" />

    <TextView
        android:id="@+id/firstTaskLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/first_label"
        app:layout_constraintEnd_toEndOf="@+id/firstTaskEt"
        app:layout_constraintStart_toStartOf="@+id/firstTaskEt"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/firstTaskEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstTaskLabel" />

    <TextView
        android:id="@+id/secondTaskLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/second_label"
        app:layout_constraintEnd_toEndOf="@+id/fourthTaskEt"
        app:layout_constraintStart_toStartOf="@+id/fourthTaskEt"
        app:layout_constraintTop_toBottomOf="@+id/firstTaskEt" />

    <EditText
        android:id="@+id/fourthTaskEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourthTaskLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>