<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.auth.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/registerUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/username_label"
        app:layout_constraintEnd_toEndOf="@+id/registerUsernameEt"
        app:layout_constraintStart_toStartOf="@+id/registerUsernameEt"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerUsernameEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameLabel" />

    <TextView
        android:id="@+id/registerPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password_label"
        app:layout_constraintEnd_toEndOf="@+id/registerPassowordEt"
        app:layout_constraintStart_toStartOf="@+id/registerPassowordEt"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameEt" />

    <EditText
        android:id="@+id/registerPassowordEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordLabel" />

    <TextView
        android:id="@+id/registerConfirmPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_password_label"
        app:layout_constraintEnd_toEndOf="@+id/registerConfirmPasswordEt"
        app:layout_constraintStart_toStartOf="@+id/registerConfirmPasswordEt"
        app:layout_constraintTop_toBottomOf="@+id/registerPassowordEt" />

    <EditText
        android:id="@+id/registerConfirmPasswordEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerConfirmPasswordLabel" />

    <Button
        android:id="@+id/registerTrigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerConfirmPasswordEt" />

</androidx.constraintlayout.widget.ConstraintLayout>